# kraken-connector

./: .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/actions/setup-pdm-env/: action.yml
.github/workflows/: deploy-docs.yml  main.yml  on-release-main.yml  release-drafter.yml
architecture/: index.html
changelog/: index.html
contributing/: index.html
docker/: Dockerfile
docker/dev/: Dockerfile
docs/: CODE_AUDIT.md  README.md  WEBSOCKET_V2_PLAN.md  architecture.md  index.md  modules.md
docs/getting-started/: authentication.md  installation.md  quickstart.md
docs/guides/: error-handling.md  logging.md  order-book.md  rate-limiting.md  rest-api.md  trading.md  websocket.md
docs/reference/: exceptions.md  http.md  resilience.md  schemas.md  ws-client.md  ws-trading.md
getting-started/authentication/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/error-handling/: index.html
guides/logging/: index.html
guides/order-book/: index.html
guides/rate-limiting/: index.html
guides/rest-api/: index.html
guides/trading/: index.html
guides/websocket/: index.html
kraken_connector/: __init__.py  exceptions.py  http.py  resilience.py  security.py  types.py  utils.py  ws.py
kraken_connector/api/: __init__.py
kraken_connector/api/account_data/: __init__.py  add_export.py  export_status.py  get_account_balance.py  get_closed_orders.py  get_extended_balance.py  get_ledgers.py  get_ledgers_info.py  get_open_orders.py  get_open_positions.py  get_orders_info.py  get_trade_balance.py  get_trade_history.py  get_trade_volume.py  get_trades_info.py  remove_export.py  retrieve_export.py
kraken_connector/api/earn/: __init__.py  allocate_strategy.py  deallocate_strategy.py  get_allocate_strategy_status.py  get_deallocate_strategy_status.py  list_allocations.py  list_strategies.py
kraken_connector/api/funding/: __init__.py  cancel_withdrawal.py  get_deposit_addresses.py  get_deposit_methods.py  (+5 more)
kraken_connector/constants/: __init__.py  account_data.py  api.py  earn.py  funding.py  market_data.py  trading.py  websockets.py
kraken_connector/schemas/: __init__.py  account_balance.py  account_transfer.py  add_2.py  add_2_order_added.py  add_2_order_added_descr.py  add_export_data.py  add_export_request.py  add_export_response.py  add_export_response_200.py  add_export_response_200_result.py  add_export_result.py  add_order_request.py  add_order_response.py  add_order_result.py  add_order_result_descr.py  add_standard_order_request_body.py  addresses.py  addresses_2.py  allocate_strategy_json_body.py  allocate_strategy_json_body_nonce.py  allocate_strategy_request.py  allocate_strategy_request_nonce.py  allocate_strategy_response.py  allocate_strategy_response_200.py  allocation.py  allocation_accumulated_reward.py  allocation_amount.py  allocation_bonding.py  allocation_bonding_entry.py  allocation_estimated_reward.py  allocation_exit_queue.py  allocation_exit_queue_entry.py  allocation_payout.py  allocation_pending.py  allocation_total.py  allocation_total_rewarded.py  allocation_unbonding.py  allocation_unbonding_entry.py  asset_info.py  (+275 more)
kraken_connector/utils/: converters.py  errors.py  validators.py
kraken_connector/ws/: __init__.py  book.py  client.py  constants.py  dispatcher.py  envelopes.py  sequence.py  subscribe.py  subscriptions.py  token.py  trading.py
reference/exceptions/: index.html
reference/http/: index.html
reference/resilience/: index.html
reference/schemas/: index.html
reference/ws-client/: index.html
reference/ws-trading/: index.html
scripts/: rename_schemas.py
search/: search_index.json
tests/: test_exceptions.py  test_foo.py  test_http.py  test_resilience.py  test_security.py  test_smoke.py  test_ws_auth_integration.py  test_ws_book.py  test_ws_book_integration.py  test_ws_client.py  test_ws_consumer.py  test_ws_models.py  test_ws_sequence.py  test_ws_subscriptions.py  test_ws_token.py  test_ws_trading.py  test_ws_trading_models.py  ws_helpers.py
(+44 files in other folders)
