[tool.poetry]
name = "kraken_connector"
version = "0.0.1"
description = "WS and HTTP clients for Kraken exchange API"
authors = ["Terry Garner <fterrylgarner@protonmail.com>"]
repository = "https://github.com/tlg7c5/kraken-connector"
documentation = "https://tlg7c5.github.io/kraken-connector/"
readme = "README.md"
packages = [
  {include = "kraken_connector"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
attrs = "^23.1.0"
python-dateutil = "^2.8.2"
httpx = "^0.25.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
openapi-python-client = "^0.15.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.4.8"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
preview = true

[tool.mypy]
files = ["kraken_connector"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 88
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    "A001",
    "C901",
    "TRY300",
    "A003",
    "E741",
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["kraken_connector"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
