[project]
name = "kraken_connector"
version = "0.0.2"
description = "WS and HTTP clients for Kraken exchange API"
authors = [
    {name = "Terry Garner", email = "fterrylgarner@protonmail.com"},
]
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
    "attrs>=23.1.0,<24",
    "python-dateutil>=2.8.2,<3",
    "httpx>=0.25.0,<0.26",
]

[project.urls]
Repository = "https://github.com/tlg7c5/kraken-connector"
Documentation = "https://tlg7c5.github.io/kraken-connector/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.0,<8",
    "pytest-cov>=4.0.0,<5",
    "deptry>=0.12.0,<1",
    "mypy>=1.5.1,<2",
    "pre-commit>=3.4.0,<4",
    "tox>=4.11.1,<5",
    "openapi-python-client>=0.15.2,<1",
]
docs = [
    "mkdocs>=1.4.2,<2",
    "mkdocs-material>=9.2.7,<10",
    "mkdocstrings[python]>=0.23.0,<1",
]

[tool.black]
line-length = 88
target-version = ['py37']
preview = true

[tool.mypy]
files = ["kraken_connector"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 88
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    "A001",
    "C901",
    "TRY300",
    "A003",
    "E741",
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["kraken_connector"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
